feat: Implement Dynamic Article Truncation and fixes
- Backend:
  - Add 	runcateArticlesDynamic to UserSettings and Settings DTO.
  - Update UserREST to support the new setting.
  - Add Liquibase changelog 5.14 for 	runcate_articles_dynamic.
  - Fix DB constraint violation by removing markAllAsReadNavigateToUnread (changelog 5.16) and mapping to existing column.

- Frontend:
  - Implement mutual exclusivity for truncation settings in thunks and slice.
  - Update Content.tsx and FeedEntry.tsx for dynamic CSS-based truncation.
  - Use Flexbox for layout to handle dynamic resizing and proper header spacing.
  - Force scrollMode='always' and ntriesToKeepAbove=0 when dynamic truncation is on.
  - Fix furled article header formatting using 	ss for correct flex behavior.
  - Update i18n messages.

- Documentation:
  - Update PROJECT_CONTEXT.md and add local_dev_setup.md.

--- a/commafeed-client/src/locales/en/messages.po
+++ b/commafeed-client/src/locales/en/messages.po
@@ -716,8 +716,8 @@ msgid "On mobile, show action buttons at the bottom of the screen"
 msgstr "On mobile, show action buttons at the bottom of the screen"
 
 #: src/components/settings/DisplaySettings.tsx
-msgid "Only applies to compact, cozy and detailed modes"
-msgstr "Only applies to compact, cozy and detailed modes"
+msgid "Only applies to compact, cozy and detailed modes. Does not apply to Truncate articles (Dynamic)."
+msgstr "Only applies to compact, cozy and detailed modes. Does not apply to Truncate articles (Dynamic)."
 
 #: src/components/settings/DisplaySettings.tsx
 msgid "Only show the first N characters of article content. Click the article link to read more."
